<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App bar -->
    <string name="salamfinance">SALAM FINANCE</string>
    <!-- Strings related to Login -->
    <string-array name="radiobtn_role">
        <!-- Radio button  -->
        <item>GURADIAN</item>
        <item>STAFF</item>

    </string-array>

    <string name="guardian_log">GUARDIAN</string>
    <string name="staff_log">STAFF</string>

    <string-array name="radiobtn_position">
        <!-- Radio button  -->
        <item>Clerk</item>
        <item>Principal</item>

    </string-array>

    <string name="clerk_log">Clerk</string>
    <string name="principal_log">Principal</string>


    <string name="forgotpass">Forgot Password</string>
    <string name="signup">"Don't have account ? <u>Sign Up</u></string>

    <!-- Login & Sign Up -->
    <string name="email">Email Address</string>
    <string name="password">Password</string>

    <!-- Buttons -->
    <string name="login_btn">LOGIN</string>
    <string name="signup_btn">SIGN UP</string>
    <string name="pay_btn">PAY</string>
    <string name="pdf_btn">Get PDF Report</string>
    <string name="next_btn">NEXT</string>

    <!-- Main Buttons -->
    <string name="payment_btn">PAYMENT</string>
    <string name="profile_btn">PROFILE</string>
    <string name="manage_btn">e-MANAGE</string>
    <string name="report_btn">e-REPORT</string>
    <string name="contact_btn">CONTACT US</string>


    <!-- Strings related to Sign Up and profile -->

    <string name="name">Full Name</string>
    <string name="ic_num">eg: 030219-09-4532</string>
    <string name="DOB">eg: dd/mm/yy</string>
    <string name="phoneNum">eg: 012-3456789</string>
    <string name="staffid">eg: RG-0001</string>
    <string name="agreement">I agree that all the informations are correct</string>
    <string name="signin">"Already have an account ? <u>Sign in</u></string>

    <!-- header sign up -->

    <string name="stud_head">STUDENT</string>
    <string name="guardian_head">GUARDIAN</string>
    <string name="clerk_head">CLERK</string>
    <string name="principal_head">PRINCIPAL</string>
    <string name="createacc_head">CREATE \nACCOUNT</string>
    <string name="signup_head">SIGN UP</string>

    <!-- Dashboard -->

    <string-array name="dashboard">
        <item>SALAM FINANCE</item>
        <item>e-MANAGE</item>
        <item>EDIT PROFILE</item>
    </string-array>

    <!-- Page Header -->
    <string-array name="page_header">
        <item>SIGN UP</item>
        <item>PAYMENT</item>
        <item>GRADE LIST</item>
        <item>REPORT</item>
    </string-array>

    <!-- Grade list -->
    <string-array name="form_list">

        <item>FROM 1</item>
        <item>FROM 2</item>
        <item>FROM 3</item>
        <item>FROM 4</item>
        <item>FROM 5</item>

    </string-array>

    <!-- Payment Page -->


    <!-- Payment radio button -->
    <string-array name="radiobtn_payment">

        <item>TO BE PAID</item>
        <item>PAID</item>

    </string-array>

    <!-- payment header -->
    <string name="bill_head">BILL NAME</string>
    <string name="endDate_head">END DATE</string>
    <string name="amount_head">AMOUNT</string>
    <string name="no_head">NO.</string>
    <string name="detail_head">DETAILS</string>
    <string name="payment_head">PAYMENT</string>

    <!-- Payment Details -->
    <string name="billname">Bill name</string>
    <string name="date">DD/MM/YY</string>
    <string name="amount">RM 0.00</string>
    <string name="view"><u>VIEW</u></string>

    <!-- Strings related to profile -->
    <string name="guardian_profile">"GUARDIAN'S DETAIL"</string>
    <string name="student_profile">"STUDENT'S DETAIL"</string>

    <!-- receipt details -->


    <!-- Strings related to icons on app bar -->
    <string name="logout_btn">log out</string>
    <string name="back_btn">back</string>


    <!-- main page details -->
    <string name="hi">Hi</string>
    <string name="welcome">Welcome back!</string>
    <!--position-->
    <string name="clerk_role">Clerk</string>
    <string name="principal_role">Principal</string>

    <!-- Contact Us details -->
    <string name="contactheader">CONTACT US</string>

    <string name="profile_head">PROFILE</string>

    <array name="fpx_banks">
        <item>Maybank</item>
        <item>CIMB Bank</item>
        <item />
        Public Bank
        <item>RHB Bank</item>
        <item>Hong Leong Bank</item>
        <item>AmBank</item>
        <item>Alliance Bank</item>
        <item>Bank Islam</item>
        <item>Affin Bank</item>
        <!-- Add more banks as needed -->
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="jan">JANUARY</string>
    <string name="feb">FEBRUARY</string>
    <string name="mac">MARCH</string>
    <string name="apr">APRIL</string>
    <string name="may">MAY</string>
    <string name="jun">JUNE</string>
    <string name="jul">JULY</string>
    <string name="aug">AUGUST</string>
    <string name="sep">SEPTEMBER</string>
    <string name="oct">OCTOBER</string>
    <string name="nov">NOVEMBER</string>
    <string name="dec">DECEMBER</string>

    <string name="form">FORMS</string>
    <string name="month">MONTHS</string>
    <string name="year">YEARS</string>
    <string name="totpaid">TOTAL PAID</string>
    <string name="percent">"%"</string>



</resources>
