<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <include layout="@layout/toolbar_general" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_head"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="15dp"
            android:textSize="35sp"
            android:textColor="@color/tepapagreen"
            android:textStyle="bold"
            android:gravity="center"
            android:letterSpacing="0.2"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/paddingtopcorner_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/clerk_head"
                android:textColor="@color/tepapagreen"
                android:textSize="25sp"
                android:letterSpacing="0.2"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/fullname"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="36dp"
                android:background="@drawable/text_bg"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:padding="16dp"
                android:textColor="@color/tepapagreen"
                android:textSize="15sp"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ic_num"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_bg"
                android:gravity="center_vertical"
                android:hint="@string/ic_num"
                android:padding="20dp"
                android:textColor="@color/tepapagreen"
                android:textSize="15sp"
                android:inputType="number" />

            <EditText
                android:id="@+id/staffid"
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/text_bg"
                android:gravity="center_vertical"
                android:hint="@string/staffid"
                android:padding="20dp"
                android:textColor="@color/tepapagreen"
                android:textSize="15sp"
                />

            <CheckBox
                android:id="@+id/agreement"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:drawablePadding="8dp"
                android:text="@string/agreement"
                android:textSize="14sp"
                android:textColor="@color/tepapagreen"
                android:buttonTint="@color/tepapagreen"/>

            <Button
                android:id="@+id/clerkNextButton"
                style="@android:style/Widget.Button"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/tepagreen_bkg"
                android:padding="8dp"
                android:text="@string/next_btn"
                android:textColor="@color/white"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
