<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:gravity="center"
    android:orientation="vertical"
    >

    <include layout="@layout/appbar"/>


    <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/payment_head"
              android:layout_marginTop="15dp"
              android:layout_marginBottom="15dp"
              android:textSize="35sp"
              android:letterSpacing="0.2"
              android:textColor="@color/tepapagreen"
              android:textStyle="bold"/>



        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/paddingtopcorner_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="70dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/headercheck"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>

                <TextView
                    android:id="@+id/headerbill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bill_head"
                    android:textAppearance="@style/header"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/headerdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/endDate_head"
                    android:textAppearance="@style/header"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:id="@+id/headeramount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/amount_head"
                    android:textAppearance="@style/header"
                    android:gravity="center_horizontal"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/billname"
                    android:textAppearance="@style/detail"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/date"
                    android:gravity="center_horizontal"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:text="@string/amount"
                    android:gravity="center_horizontal"
                    />

            </LinearLayout>




            </LinearLayout>
            <Button
                android:id="@+id/paybtn"
                style="@android:style/Widget.Button"
                android:layout_width="230dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/tepagreen_bkg"
                android:padding="8dp"
                android:text="PAY"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>
</LinearLayout>

